index.html 업데이트
대제목 수정

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>lostamen — 공대원 채찍질</title>
+  <title>싱글벙글 군장검사</title>
   <!-- Google Font: Noto Sans KR -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700;900&display=swap" rel="stylesheet">
   <style>
@@ -392,8 +392,8 @@
     function mockCharacter(name){
       return {
         name: name,
-        server: '카마인',
-        guild: '채찍단',
+        server: '아만',
+        guild: '가장오래된꿈',
         class: '버서커',
         itemLevel: Math.floor(1500 + Math.random()*300),
         combatPower: Math.floor(100000 + Math.random()*40000),
