index.html 업데이트
다중 캐릭 추가

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     // =========================
     const ADMIN_CHARACTERS = [
       '장용노예2호',
-      // '캐릭명2','캐릭명3', ... 최대 20개까지
+      // '애이르','오바때끼', ... 최대 20개까지
     ].slice(0,20);
 
     const ADMIN_BANNER_IMG = 'https://via.placeholder.com/1100x200.png?text=공지+배너';
