index.html 업데이트
인원 추가

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
     // 관리자 설정 (코드에서만 수정)
     // =========================
     const ADMIN_CHARACTERS = [
-      '장용노예2호',
+      '장용노예2호','애이르','오바때끼'
       // '애이르','오바때끼', ... 최대 20개까지
     ].slice(0,20);
 
-    const ADMIN_BANNER_IMG = 'https://via.placeholder.com/1100x200.png?text=공지+배너';
-    const ADMIN_NOTICE_TEXT = '레이드 공대원 모집: 수목 20시, 티어 3 이상만 / 지각 금지';
+    const ADMIN_BANNER_IMG = '.';
+    const ADMIN_NOTICE_TEXT = '카제로스 더퍼스트 가실 분 공대장:김민지';
 
     const API_BASE = 'https://YOUR_VERCEL_PROJECT.vercel.app/api'; // ← 실제 Vercel 주소로 교체
     const AUTO_MS = 60*60*1000; // 1시간
