index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       // '애이르','오바때끼', ... 최대 20개까지
     ].slice(0,20);
 
-    const ADMIN_BANNER_IMG = '.';
+    const ADMIN_BANNER_IMG = 'IMG_2819.jpeg';
     const ADMIN_NOTICE_TEXT = '카제로스 더퍼스트 가실 분 공대장:김민지';
 
     const API_BASE = 'https://YOUR_VERCEL_PROJECT.vercel.app/api'; // ← 실제 Vercel 주소로 교체
