index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     const ADMIN_BANNER_IMG = 'IMG_2819.jpeg';
     const ADMIN_NOTICE_TEXT = '카제로스 더퍼스트 가실 분 공대장:김민지';
 
-    const API_BASE = 'https://YOUR_VERCEL_PROJECT.vercel.app/api'; // ← 실제 Vercel 주소로 교체
+    const API_BASE = 'https://yong-qgw8-jangstars-projects-c304414c.vercel.app'; // ← 실제 Vercel 주소로 교체
     const AUTO_MS = 60*60*1000; // 1시간
 
     const $ = s=>document.querySelector(s);
