--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       '장용노예2호','애이르','오바때끼','우니꼬쏠쏠'
     ].slice(0,20);
 
-    const ADMIN_BANNER_IMG = 'lostarkboss.webp';
+    const ADMIN_BANNER_IMG = 'topbaner_boss&mj.png';
     const ADMIN_NOTICE_TEXT = '카제로스 더퍼스트 가실 분 공대장:김민지';
 
     const API_BASE = 'https://yong-qgw8.vercel.app'; // 예: /character 함수가 루트에 매핑되어 있다고 가정
