--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     const ADMIN_BANNER_IMG = 'topbaner_boss&mj.png';
     const ADMIN_NOTICE_TEXT = '카제로스 더퍼스트 가실 분 공대장:김민지';
 
-    const API_BASE = 'https://yong-qgw8.vercel.app'; // 예: /character 함수가 루트에 매핑되어 있다고 가정
+    const API_BASE = 'https://yong-qgw8.vercel.app/api'; // 예: /character 함수가 루트에 매핑되어 있다고 가정
     const AUTO_MS = 60*60*1000; // 1시간
 
     const $ = s=>document.querySelector(s);
