--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
 
     // 상/하/좌/우 배너(이미지 + 클릭 링크) — 여기서만 수정
     const ADMIN_BANNERS = {
-      top:    { img: 'https://jangstar00.github.io/yong/images/topbaner_tech',        link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
-      left:   { img: 'https://jangstar00.github.io/yong/images/leftbaner_tech',  link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
-      right:  { img: 'https://jangstar00.github.io/yong/images/rightbaner_tech', link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
-      bottom: { img: 'https://jangstar00.github.io/yong/images/topbaner_mj',link: 'https://kloa.gg/characters/%EC%95%A0%EC%9D%B4%EB%A5%B4' }
+      top:    { img: 'https://jangstar00.github.io/yong/images/topbaner_tech.png',  link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
+      left:   { img: 'https://jangstar00.github.io/yong/images/leftbaner_tech.png',  link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
+      right:  { img: 'https://jangstar00.github.io/yong/images/rightbaner_tech.png', link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
+      bottom: { img: 'https://jangstar00.github.io/yong/images/topbaner_mj.png',link: 'https://kloa.gg/characters/%EC%95%A0%EC%9D%B4%EB%A5%B4' }
     };
 
     // 공지(코드로만 등록)
