--- a/index.html
+++ b/index.html
@@ -152,6 +152,18 @@
       </div>
     </div>
   </div>
+/* 화면 좌우 고정 배너 */
+.side-float{position:fixed; top:160px; width:160px; z-index:50;
+  background:rgba(0,0,0,.12); border-radius:12px; overflow:hidden}
+.side-float.left{left:16px}
+.side-float.right{right:16px}
+.side-float a{display:block; line-height:0}
+.side-float img{display:block; width:100%; height:auto; object-fit:cover}
+
+/* 작은 화면에서는 숨김 */
+@media (max-width:1200px){
+  .side-float{display:none}
+}
 
   <script>
     // ========================= 관리자 설정 =========================
