--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
   <script>
     // ========================= 관리자 설정 =========================
-    const ADMIN_CHARACTERS = ['장용노예2호','애이르','오바때끼','우니꼬쏠쏠'].slice(0,20);
+    const ADMIN_CHARACTERS = ['장용노예2호','애이르','오바때끼','우니꼬쏠쏠','달빛로드'.'미드미네머너','아장르카용나'].slice(0,20);
 
     // 상/하/좌/우 배너(이미지 + 클릭 링크) — 여기서만 수정
     const ADMIN_BANNERS = {
