--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     // 상/하/좌/우 배너(이미지 + 클릭 링크) — 여기서만 수정
     const ADMIN_BANNERS = {
-      top:    { img: 'https://jangstar00.github.io/yong/images/topbaner_techpng',        link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
+      top:    { img: 'https://jangstar00.github.io/yong/images/topbaner_tech.png',        link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
       left:   { img: 'https://jangstar00.github.io/yong/images/leftbaner_tech.png',  link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
       right:  { img: 'https://jangstar00.github.io/yong/images/rightbaner_tech.png', link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
       bottom: { img: 'https://jangstar00.github.io/yong/images/topbaner_mj.png',link: 'https://kloa.gg/characters/%EC%95%A0%EC%9D%B4%EB%A5%B4' }
